--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
-Flask
-matplotlib
-moviepy
+Flask==2.2.5
+matplotlib==3.7.1
+moviepy==1.0.3
 numpy==1.23.5
-opencv-python
-pycryptodomex
-Pillow
-PyGithub
-pyngrok
-tensorflow
+opencv-python==4.8.0
+pycryptodomex==3.19.0
+Pillow==9.4.0
+PyGithub==1.59.1
+pyngrok==6.1.0
+tensorflow==2.13.0
