update cipher check

--- a/manager/config/config.ini
+++ b/manager/config/config.ini
@@ -8,6 +8,7 @@ pickle_output_path = datas_output/labels.pickle
 json_output_path = datas_output/labels.json
 json_simple_output_path = datas_output/labels-simple.json
 temp_root_path = temp
+config_pickle_path = manager/config/config.pickle
 model_path = manager/models/movenet_singlepose_thunder_4
 model_download_path =  manager/models/movenet_singlepose_thunder_4.tar.gz
 
