--- a/manager/config/config.ini
+++ b/manager/config/config.ini
@@ -1,5 +1,6 @@
 [PATH]
 video_root_path = videos
+data_root_path = datas
 video_output_root_path = videos_output
 video_target_path = videos_output/target.mp4
 output_inference_path = videos_output/output_inference.mp4
@@ -15,4 +16,4 @@ model_download_path =  manager/models/movenet_singlepose_thunder_4.tar.gz
 
 [URL]
 model_url = https://tfhub.dev/google/movenet/singlepose/thunder/4?tf-hub-format=compressed
-
+demo_video_url = https://www.youtube.com/watch?v=UzC3RBy3Luk&ab_channel=MayFit
