--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,8 @@ matplotlib==3.7.1
 moviepy==1.0.3
 numpy==1.23.5
 opencv-python==4.8.0.76
+openpyxl==3.1.2
+pandas==2.1.1
 pycryptodomex==3.19.0
 Pillow==9.4.0
 PyGithub==1.59.1
