add faye demo videos

--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@
 main.ipynb
 
 # Folder
-videos/
+# videos/
 datas/
 videos_output/
 datas_output/
@@ -48,7 +48,7 @@ pip-delete-this-directory.txt
 
 
 # Big files
-*.mp4
+# *.mp4
 
 
 # Unit test / coverage reports
